--- a/src/Box.css
+++ b/src/Box.css
@@ -1,4 +1,5 @@
 .box{
+    position: relative;
     margin: auto;
     border: 2px solid rgb(50,50,50);
     width: 600px;
@@ -6,7 +7,7 @@
 
     display: grid;
     grid-gap: 3px;
-    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr 1fr 1fr ;
     background-color: #fff;
     color: #444;
 }
@@ -19,4 +20,11 @@
     font-size: 150%;
     /* width: 50px;
     height: 50px; */
+}
+
+.core{
+    color: rgb(101, 161, 230);
+    position: absolute;
+    top: 60px;  
+    left: 60px;
 }
