--- a/src/Box.css
+++ b/src/Box.css
@@ -28,3 +28,15 @@
     top: 60px;  
     left: 60px;
 }
+
+.core-initial {
+    /* Стили, определяющие начальное положение
+      элемента на странице
+    */
+    transform: translateX(0px);
+  }
+
+.core-final {
+    /* Стили, определяющие конечное положение */
+    transform: translateX(50px);
+}
